--- a/resources/styles.css
+++ b/resources/styles.css
@@ -24,6 +24,15 @@ p, span, h3 {
 }
 
 
+.container {
+    display: flex;
+    margin-top: 8rem;
+    margin-bottom: 8rem;
+    width: 100%;
+}
+
+
+
 /*Header*/
 
 header .content {
@@ -37,7 +46,7 @@ header .content {
     box-shadow:  0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.99);
 }
 
-a {
+header a {
     color: rgb(25, 25, 104);
     text-decoration: none;
     text-align: center;
@@ -47,7 +56,8 @@ a {
     text-transform: uppercase;
 }
 
-a:hover {
+header a:hover {
+    cursor: pointer;
     color: rgb(105, 79, 24) ;
 }
 
@@ -81,17 +91,6 @@ nav a {
 
 /*About*/
 
-.container {
-    display: flex;
-    margin-top: 8rem;
-    margin-bottom: 8rem;
-    width: 100%;
-    justify-content: center;
-    
-}
-
-
-
 .picture {
     margin-left: 3rem;
     box-shadow:  0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.99);
@@ -105,7 +104,24 @@ nav a {
     font-weight: 500;
 }
 
+
+/*Likes*/
+
+.likeBTN {
+    justify-content: center;
+}
+
+.likes {
+    justify-content: center;
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+
 /*Skills section*/
+
+.skills {
+    justify-content: center;
+}
 
 .skills h3 {
     text-align: center;
@@ -114,7 +130,15 @@ nav a {
 
 /*Projects Section*/
 
+
+
+.projects {
+    justify-content: center;
+}
+
+
 #project-1, #project-2, #project-3 {
+    overflow: hidden;
     width: 25rem;
     height: auto;
     margin: 2rem;
@@ -122,6 +146,7 @@ nav a {
 }
 
 #project-1:hover, #project-2:hover, #project-3:hover {
+    cursor: pointer;
     box-shadow:  0 4px 8px 0 rgba(36, 33, 187, 0.99), 0 6px 20px 0 rgba(36, 33, 187, 0.99);
 }
 
@@ -158,12 +183,17 @@ nav a {
 .button:hover {
     color: rgb(105, 79, 24);
     background-color: rgb(114, 217, 235);
+    cursor: pointer;
 }
 
 .button:active { 
     box-shadow: none;
     margin-top: 2px;
     margin-bottom: -2px;
+}
+
+.button a {
+    color: rgb(255, 255, 255);
 }
 
 
