--- a/resources/styles.css
+++ b/resources/styles.css
@@ -91,6 +91,11 @@ nav a {
 
 /*About*/
 
+
+.about {
+    justify-content: center;
+}
+
 .picture {
     margin-left: 3rem;
     box-shadow:  0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.99);
@@ -120,6 +125,36 @@ nav a {
 .likeBTN {
     justify-content: center;
 }
+
+
+/*Button*/
+
+.button {
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 900;
+    border-radius: 4px;
+    background-color: rgb(5, 9, 66);
+    color: white;
+    width: auto;
+    padding: 1.25rem 4.25rem;
+    box-shadow:  0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.99);
+    font-family: "IBM Plex Mono";
+    font-size: 1.2rem;
+}
+
+.button:hover {
+    color: rgb(105, 79, 24);
+    background-color: rgb(114, 217, 235);
+    cursor: pointer;
+}
+
+.button:active { 
+    box-shadow: none;
+    margin-top: 2px;
+    margin-bottom: -2px;
+}
+
 
 
 /*Skills section*/
@@ -168,7 +203,8 @@ nav a {
 }
 
 
-/*Button*/
+/*Contact Section*/
+
 .contact {
     width: 100%;
     display: flex;
@@ -176,44 +212,29 @@ nav a {
     margin-top: 10rem;
     margin-bottom: 0;
     text-align: center;
-    
 }
 
-.button {
+.details a, li{
+    color: rgb(25, 25, 104);
+    text-decoration: none;
     text-align: center;
-    text-transform: uppercase;
-    font-weight: 900;
-    border-radius: 4px;
-    background-color: rgb(5, 9, 66);
-    color: white;
-    width: auto;
-    padding: 1.25rem 4.25rem;
-    box-shadow:  0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.99);
     font-family: "IBM Plex Mono";
+    font-weight: 700;
     font-size: 1.2rem;
+    text-transform: uppercase;
 }
 
-.button:hover {
-    color: rgb(105, 79, 24);
-    background-color: rgb(114, 217, 235);
-    cursor: pointer;
+.details a:hover {
+    box-shadow:  0 4px 8px 0 rgba(36, 33, 187, 0.99), 0 6px 20px 0 rgba(36, 33, 187, 0.99);
 }
 
-.button:active { 
+.details a:active {
     box-shadow: none;
-    margin-top: 2px;
-    margin-bottom: -2px;
 }
-
-.button a {
-    color: rgb(255, 255, 255);
-}
-
-
 
 /*Footer*/
 footer {
-    margin-top: 30%;
+    margin-top: 10%;
     text-align: center;
     font-weight: 600;
     font-style: italic;
