--- a/resources/styles.css
+++ b/resources/styles.css
@@ -44,6 +44,7 @@ header .content {
     background-size: cover;
     width: auto;
     box-shadow:  0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.99);
+    border-radius: 0.5rem;
 }
 
 header a {
@@ -100,6 +101,7 @@ nav a {
     margin-left: 3rem;
     box-shadow:  0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.99);
     height: 60%;
+    border-radius: 0.5rem;
 }
 
 .paragraph {
@@ -214,6 +216,15 @@ nav a {
     text-align: center;
 }
 
+.contact h2 {
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+
+.contact ul {
+    padding: 0;
+}
+
 .details a, li{
     color: rgb(25, 25, 104);
     text-decoration: none;
@@ -222,6 +233,7 @@ nav a {
     font-weight: 700;
     font-size: 1.2rem;
     text-transform: uppercase;
+    list-style-position: inside;
 }
 
 .details a:hover {
